# faculty-network-newspaper

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  SQL_EXAMPLES.md  docker-compose.yml  faculty-newspaper.cabal
app/: Main.hs
docker/mysql/init/: 01_schema.sql  02_seed.sql
src/: CLI.hs  DAO.hs  DB.hs  Models.hs
