cabal-version:      2.4
name:               faculty-newspaper
version:            0.1.0.0
synopsis:           Information system "Faculty Network Newspaper"
description:        Information system "Faculty Network Newspaper" — university lab project for Functional Programming. Includes database with articles, authors, readers, feedback, and statistics.
license:            MIT
license-file:       LICENSE
author:             Yaroslav
maintainer:         jabka00@example.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable faculty-newspaper
    import:           warnings
    main-is:          Main.hs
    other-modules:    DB, Models, DAO, CLI
    build-depends:
        base >=4.18,
        bytestring ^>=0.11,
        text,
        time,
        containers ^>=0.6,
        aeson ^>=2.2,
        directory ^>=1.3,
        filepath ^>=1.4,
        exceptions ^>=0.10,
        mysql-simple,
        resource-pool ^>=0.4.0.0
    hs-source-dirs:   app, src
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    extra-lib-dirs:   /opt/homebrew/opt/mysql-client/lib /opt/homebrew/lib
    extra-include-dirs: /opt/homebrew/opt/mysql-client/include
    extra-libraries:  mysqlclient zstd
    default-language: Haskell2010